// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`static github: kosko generate --dev 1`] = `
"---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-sample-kosko-e2e-branch
  namespace: sample-kosko-e2e-branch
spec:
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: ingress-controller
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/delete-strategy: orphan
    app.github.com/job: xxxxxxx-job
    app.github.com/ref: refs/heads/e2e-branch
    app.github.com/repo: socialgouv/sample-kosko
    app.github.com/run: '12345'
    app.github.com/sha: '8843083'
  labels:
    app: static-containerPort
    application: sample-kosko
    component: nginx
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: static-containerPort
  namespace: sample-kosko-e2e-branch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-containerPort
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        kapp.k14s.io/delete-strategy: orphan
        app.github.com/job: xxxxxxx-job
        app.github.com/ref: refs/heads/e2e-branch
        app.github.com/repo: socialgouv/sample-kosko
        app.github.com/run: '12345'
        app.github.com/sha: '8843083'
      labels:
        app: static-containerPort
        application: sample-kosko
        component: nginx
        owner: sample-kosko
        team: sample-kosko
        cert: wildcard
    spec:
      containers:
        - image: >-
            harbor.fabrique.social.gouv.fr/undefined/static-containerPort:sha-8843083edb7f873cad1d1420731a60773594ffae
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: static-containerPort
          ports:
            - containerPort: 4242
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static-containerPort
    application: sample-kosko
    component: nginx
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: static-containerPort
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/delete-strategy: orphan
    app.github.com/job: xxxxxxx-job
    app.github.com/ref: refs/heads/e2e-branch
    app.github.com/repo: socialgouv/sample-kosko
    app.github.com/run: '12345'
    app.github.com/sha: '8843083'
  namespace: sample-kosko-e2e-branch
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4242
  selector:
    app: static-containerPort
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/delete-strategy: orphan
    app.github.com/job: xxxxxxx-job
    app.github.com/ref: refs/heads/e2e-branch
    app.github.com/repo: socialgouv/sample-kosko
    app.github.com/run: '12345'
    app.github.com/sha: '8843083'
  labels:
    app: static-containerPort
    application: sample-kosko
    component: nginx
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: static-containerPort
  namespace: sample-kosko-e2e-branch
spec:
  rules:
    - host: sample-kosko-e2e-branch.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: static-containerPort
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sample-kosko-e2e-branch.dev2.fabrique.social.gouv.fr
      secretName: wildcard-crt"
`;

exports[`static: kosko generate --dev 1`] = `
"---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-sample-kosko-24-e2e-branch-42
  namespace: sample-kosko-24-e2e-branch-42
spec:
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: ingress-controller
    - from:
        - namespaceSelector:
            matchLabels:
              network-policy/source: monitoring
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/delete-strategy: orphan
    app.gitlab.com/app: socialgouv-sample-kosko
    app.gitlab.com/env: e2e-branch-42
    app.gitlab.com/env.name: e2e-branch-dev2
  labels:
    app: static-containerPort
    application: e2e-branch-42-sample-kosko
    component: nginx
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: static-containerPort
  namespace: sample-kosko-24-e2e-branch-42
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-containerPort
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
        kapp.k14s.io/delete-strategy: orphan
        app.gitlab.com/app: socialgouv-sample-kosko
        app.gitlab.com/env: e2e-branch-42
        app.gitlab.com/env.name: e2e-branch-dev2
      labels:
        app: static-containerPort
        application: e2e-branch-42-sample-kosko
        component: nginx
        owner: sample-kosko
        team: sample-kosko
        cert: wildcard
    spec:
      containers:
        - image: >-
            harbor.fabrique.social.gouv.fr/undefined/static-containerPort:8843083edb7f873cad1d1420731a60773594ffae
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: static-containerPort
          ports:
            - containerPort: 4242
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 32Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /index.html
              port: http
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static-containerPort
    application: e2e-branch-42-sample-kosko
    component: nginx
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: static-containerPort
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/delete-strategy: orphan
    app.gitlab.com/app: socialgouv-sample-kosko
    app.gitlab.com/env: e2e-branch-42
    app.gitlab.com/env.name: e2e-branch-dev2
  namespace: sample-kosko-24-e2e-branch-42
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4242
  selector:
    app: static-containerPort
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
    kapp.k14s.io/delete-strategy: orphan
    app.gitlab.com/app: socialgouv-sample-kosko
    app.gitlab.com/env: e2e-branch-42
    app.gitlab.com/env.name: e2e-branch-dev2
  labels:
    app: static-containerPort
    application: e2e-branch-42-sample-kosko
    component: nginx
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: static-containerPort
  namespace: sample-kosko-24-e2e-branch-42
spec:
  rules:
    - host: e2e-branch-42-sample-kosko.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              service:
                name: static-containerPort
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - e2e-branch-42-sample-kosko.dev2.fabrique.social.gouv.fr
      secretName: wildcard-crt"
`;
